--- a/Proyecto_Final/DownloadData_wAPI.ipynb
+++ b/Proyecto_Final/DownloadData_wAPI.ipynb
@@ -6,7 +6,7 @@
       "name": "DownloadData_wAPI.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNAwtwx9pKcFurZSx1w7gT1",
+      "authorship_tag": "ABX9TyPWgjYm5BrAGpM79rUXqcbI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EJK9sUfZY5t1",
-        "outputId": "68b1e090-83d4-4afe-c393-80893d8fdb5f"
+        "outputId": "8992e58d-a4b5-46f5-aae2-6941f8c27849"
       },
       "source": [
         "from google.colab import drive\r\n",
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q15K97_UY_Kr",
-        "outputId": "3aafbe41-3e1b-4579-a3b1-e1102879bd8b"
+        "outputId": "073abeeb-3c4b-4ec7-8fec-017641fe4d70"
       },
       "source": [
         "!kaggle competitions download -c asap-aes"
@@ -115,45 +115,45 @@
           "output_type": "stream",
           "text": [
             "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.10 / client 1.5.4)\n",
-            "Downloading training_set_rel3.xlsx.zip to /content\n",
-            "100% 6.20M/6.20M [00:00<00:00, 64.3MB/s]\n",
-            "\n",
-            "Downloading training_set_rel3.xls.zip to /content\n",
-            " 91% 5.00M/5.49M [00:00<00:00, 23.6MB/s]\n",
-            "100% 5.49M/5.49M [00:00<00:00, 21.7MB/s]\n",
+            "Downloading valid_set.xlsx.zip to /content\n",
+            "  0% 0.00/2.01M [00:00<?, ?B/s]\n",
+            "100% 2.01M/2.01M [00:00<00:00, 67.7MB/s]\n",
+            "Downloading valid_sample_submission_1_column_no_header.csv to /content\n",
+            "  0% 0.00/14.9k [00:00<?, ?B/s]\n",
+            "100% 14.9k/14.9k [00:00<00:00, 14.9MB/s]\n",
+            "Downloading Training_Materials.zip to /content\n",
+            " 75% 41.0M/55.0M [00:00<00:00, 38.5MB/s]\n",
+            "100% 55.0M/55.0M [00:01<00:00, 56.1MB/s]\n",
             "Downloading valid_sample_submission_2_column.csv to /content\n",
             "  0% 0.00/41.4k [00:00<?, ?B/s]\n",
-            "100% 41.4k/41.4k [00:00<00:00, 33.9MB/s]\n",
-            "Downloading training_set_rel3.tsv.zip to /content\n",
-            "  0% 0.00/4.86M [00:00<?, ?B/s]\n",
-            "100% 4.86M/4.86M [00:00<00:00, 44.8MB/s]\n",
-            "Downloading Essay_Set_Descriptions.zip to /content\n",
-            "  0% 0.00/214k [00:00<?, ?B/s]\n",
-            "100% 214k/214k [00:00<00:00, 62.8MB/s]\n",
-            "Downloading valid_set.xls.zip to /content\n",
-            "  0% 0.00/1.79M [00:00<?, ?B/s]\n",
-            "100% 1.79M/1.79M [00:00<00:00, 114MB/s]\n",
-            "Downloading valid_set.tsv.zip to /content\n",
-            "  0% 0.00/1.60M [00:00<?, ?B/s]\n",
-            "100% 1.60M/1.60M [00:00<00:00, 227MB/s]\n",
-            "Downloading valid_sample_submission_5_column.csv to /content\n",
-            "  0% 0.00/88.5k [00:00<?, ?B/s]\n",
-            "100% 88.5k/88.5k [00:00<00:00, 66.6MB/s]\n",
+            "100% 41.4k/41.4k [00:00<00:00, 39.7MB/s]\n",
             "Downloading test_set.tsv.zip to /content\n",
             "  0% 0.00/1.60M [00:00<?, ?B/s]\n",
             "100% 1.60M/1.60M [00:00<00:00, 109MB/s]\n",
-            "Downloading valid_sample_submission_1_column_no_header.csv to /content\n",
-            "  0% 0.00/14.9k [00:00<?, ?B/s]\n",
-            "100% 14.9k/14.9k [00:00<00:00, 10.6MB/s]\n",
-            "Downloading Training_Materials.zip to /content\n",
-            " 75% 41.0M/55.0M [00:00<00:00, 59.6MB/s]\n",
-            "100% 55.0M/55.0M [00:00<00:00, 92.4MB/s]\n",
-            "Downloading valid_set.xlsx.zip to /content\n",
-            "  0% 0.00/2.01M [00:00<?, ?B/s]\n",
-            "100% 2.01M/2.01M [00:00<00:00, 133MB/s]\n",
+            "Downloading valid_set.tsv.zip to /content\n",
+            "  0% 0.00/1.60M [00:00<?, ?B/s]\n",
+            "100% 1.60M/1.60M [00:00<00:00, 231MB/s]\n",
             "Downloading valid_sample_submission_1_column.csv to /content\n",
             "  0% 0.00/14.9k [00:00<?, ?B/s]\n",
-            "100% 14.9k/14.9k [00:00<00:00, 14.4MB/s]\n"
+            "100% 14.9k/14.9k [00:00<00:00, 14.0MB/s]\n",
+            "Downloading valid_set.xls.zip to /content\n",
+            "  0% 0.00/1.79M [00:00<?, ?B/s]\n",
+            "100% 1.79M/1.79M [00:00<00:00, 228MB/s]\n",
+            "Downloading training_set_rel3.xls.zip to /content\n",
+            "  0% 0.00/5.49M [00:00<?, ?B/s]\n",
+            "100% 5.49M/5.49M [00:00<00:00, 90.0MB/s]\n",
+            "Downloading Essay_Set_Descriptions.zip to /content\n",
+            "  0% 0.00/214k [00:00<?, ?B/s]\n",
+            "100% 214k/214k [00:00<00:00, 216MB/s]\n",
+            "Downloading training_set_rel3.tsv.zip to /content\n",
+            "  0% 0.00/4.86M [00:00<?, ?B/s]\n",
+            "100% 4.86M/4.86M [00:00<00:00, 44.7MB/s]\n",
+            "Downloading training_set_rel3.xlsx.zip to /content\n",
+            "  0% 0.00/6.20M [00:00<?, ?B/s]\n",
+            "100% 6.20M/6.20M [00:00<00:00, 57.1MB/s]\n",
+            "Downloading valid_sample_submission_5_column.csv to /content\n",
+            "  0% 0.00/88.5k [00:00<?, ?B/s]\n",
+            "100% 88.5k/88.5k [00:00<00:00, 162MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -166,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xg4UwlBNAcwc",
-        "outputId": "4fa8ba54-09a8-4c3a-e20a-a41513dfd8ff"
+        "outputId": "5208769b-8236-4d43-db9c-0ef7cd6617d0"
       },
       "source": [
         "!unzip training_set_rel3.tsv.zip\r\n",
@@ -204,7 +204,7 @@
           "height": 142
         },
         "id": "U--t9_EyemJQ",
-        "outputId": "405d8c01-2271-40be-d725-74403b0e6981"
+        "outputId": "91e6ca11-5d1d-4e06-86ed-4edb68a4639d"
       },
       "source": [
         "import pandas as pd\r\n",
@@ -294,7 +294,7 @@
           "height": 142
         },
         "id": "5Jjf7ziufGwg",
-        "outputId": "72208261-4fe2-46a7-e8b0-d14a8985050e"
+        "outputId": "d58c1b78-1d29-4a2c-9686-cf743a99abd0"
       },
       "source": [
         "df2 = pd.read_excel('/content/valid_set.xlsx')\r\n",
@@ -384,14 +384,14 @@
           "height": 204
         },
         "id": "sRk0FYCpfOnn",
-        "outputId": "bed16370-95da-40a4-ad16-66c8329c2c00"
+        "outputId": "9f4565dc-09b4-4c1d-fee6-7570f19cb36d"
       },
       "source": [
         "df2.drop(columns=['domain1_predictionid',\t'domain2_predictionid'],inplace=True)\r\n",
         "\r\n",
         "df2['predicted_score'] = df1['predicted_score']\r\n",
         "\r\n",
-        "df2.to_csv('valid_set.csv')\r\n",
+        "df2.to_csv('valid_set.csv', index=False)\r\n",
         "df2.head()"
       ],
       "execution_count": 7,
@@ -494,62 +494,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o8F0tmjrBzJ0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ad56c2d5-ab1a-4cd1-874f-5c064a1e2420"
+        "id": "o8F0tmjrBzJ0"
       },
       "source": [
         "#path that contains folder you want to copy\r\n",
         "%cd /content\r\n",
         "%cp -av /content /gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content\n",
-            "'/content/.config/.metricsUUID' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/.metricsUUID'\n",
-            "'/content/.config/.last_opt_in_prompt.yaml' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/.last_opt_in_prompt.yaml'\n",
-            "'/content/.config/.last_survey_prompt.yaml' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/.last_survey_prompt.yaml'\n",
-            "'/content/.config/.last_update_check.json' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/.last_update_check.json'\n",
-            "'/content/.config/active_config' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/active_config'\n",
-            "'/content/.config/config_sentinel' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/config_sentinel'\n",
-            "'/content/.config/configurations/config_default' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/configurations/config_default'\n",
-            "'/content/.config/gce' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/gce'\n",
-            "'/content/.config/logs/2021.02.16/16.34.20.813529.log' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/logs/2021.02.16/16.34.20.813529.log'\n",
-            "'/content/.config/logs/2021.02.16/16.34.40.961010.log' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/logs/2021.02.16/16.34.40.961010.log'\n",
-            "'/content/.config/logs/2021.02.16/16.34.55.815490.log' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/logs/2021.02.16/16.34.55.815490.log'\n",
-            "'/content/.config/logs/2021.02.16/16.35.01.697583.log' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/logs/2021.02.16/16.35.01.697583.log'\n",
-            "'/content/.config/logs/2021.02.16/16.35.17.806424.log' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/logs/2021.02.16/16.35.17.806424.log'\n",
-            "'/content/.config/logs/2021.02.16/16.35.18.394122.log' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/.config/logs/2021.02.16/16.35.18.394122.log'\n",
-            "'/content/sample_data/README.md' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/sample_data/README.md'\n",
-            "'/content/sample_data/anscombe.json' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/sample_data/anscombe.json'\n",
-            "'/content/sample_data/california_housing_test.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/sample_data/california_housing_test.csv'\n",
-            "'/content/sample_data/california_housing_train.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/sample_data/california_housing_train.csv'\n",
-            "'/content/sample_data/mnist_test.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/sample_data/mnist_test.csv'\n",
-            "'/content/sample_data/mnist_train_small.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/sample_data/mnist_train_small.csv'\n",
-            "'/content/valid_set.xls.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_set.xls.zip'\n",
-            "'/content/valid_sample_submission_5_column.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_sample_submission_5_column.csv'\n",
-            "'/content/valid_set.tsv.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_set.tsv.zip'\n",
-            "'/content/valid_sample_submission_1_column_no_header.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_sample_submission_1_column_no_header.csv'\n",
-            "'/content/test_set.tsv.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/test_set.tsv.zip'\n",
-            "'/content/valid_set.xlsx.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_set.xlsx.zip'\n",
-            "'/content/training_set_rel3.xlsx.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/training_set_rel3.xlsx.zip'\n",
-            "'/content/valid_sample_submission_1_column.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_sample_submission_1_column.csv'\n",
-            "'/content/Essay_Set_Descriptions.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/Essay_Set_Descriptions.zip'\n",
-            "'/content/valid_sample_submission_2_column.csv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/valid_sample_submission_2_column.csv'\n",
-            "'/content/training_set_rel3.tsv.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/training_set_rel3.tsv.zip'\n",
-            "'/content/Training_Materials.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/Training_Materials.zip'\n",
-            "'/content/training_set_rel3.xls.zip' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/training_set_rel3.xls.zip'\n",
-            "'/content/training_set_rel3.tsv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/training_set_rel3.tsv'\n",
-            "'/content/test_set.tsv' -> '/gdrive/MyDrive/UNS/Aprendizaje_de_maquina/Proyecto_Final/data/content/test_set.tsv'\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -567,7 +520,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4Gl-rjmZME0",
-        "outputId": "73288a10-8b34-44dc-c0ed-502835f40953"
+        "outputId": "a81c491c-a130-49d6-a5e7-a1d64ad41fbb"
       },
       "source": [
         "#path that contains folder you want to copy\r\n",
@@ -593,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BEMWPgGZil0o",
-        "outputId": "1a2666e4-236c-4b5b-8782-893357a63dd1"
+        "outputId": "2c03afc7-65ed-4bc8-dbdf-6fd6a9a520ac"
       },
       "source": [
         "#path that contains folder you want to copy\r\n",
@@ -628,7 +581,7 @@
         "id": "18zZBgwnB7Lc"
       },
       "source": [
-        "Es importante leer la documentación ya que contiene información sobre la estructura de los datos. Esto nos permitirá hacer un mejor procesamiento de los mismos. Por ejemplo los datos de validación se encontraban separados en dos hojas de cálculos distintas, las cuales contenían por un lado los ensayos y su \"id\" y por otro lado el \"id\" y la nota correspondiente. El archivo \"valid_sample_submission_5_column.csv\" que posee el puntaje correspondiente a los datos de validación, \"valid_set.xlsx\" que contiene los ensayos de validación y por último \"valid_set.csv\" fue creado y contiene los datos de validación."
+        "Es importante leer la documentación ya que contiene información sobre la estructura de los datos. Esto nos permitirá hacer un mejor procesamiento de los mismos. Por ejemplo los datos de validación se encontraban separados en dos hojas de cálculos distintas, las cuales contenían por un lado los ensayos y su \"id\" y por otro lado el \"id\" y la nota correspondiente. El archivo \"valid_sample_submission_5_column.csv\" posee el puntaje correspondiente a los datos de validación, \"valid_set.xlsx\" que contiene los ensayos de validación y por último \"valid_set.csv\" fue creado y contiene los datos de validación."
       ]
     }
   ]
