--- a/Proyecto_Final/CV_1df.ipynb
+++ b/Proyecto_Final/CV_1df.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CV_1df.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMA6VN8VcehUelYEVhXGGam",
+      "authorship_tag": "ABX9TyMD+lXD0/7sjZSQ6o8xTs5Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/GastonRAraujo/Materia-Ap_Maq/blob/master/Proyexto_Final/CV_1df.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/GastonRAraujo/Materia-Ap_Maq/blob/master/Proyecto_Final/CV_1df.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2565,6 +2565,7 @@
         "outputId": "a1529723-e446-4fab-ef9d-57bfa25029d1"
       },
       "source": [
+        "# Using the Logistic Regression\r\n",
         "classifier3 = LogisticRegression(max_iter=100, n_jobs=-1)\r\n",
         "\r\n",
         "classifier3.fit(X_train, y_train)\r\n",
@@ -2687,6 +2688,13 @@
         "\r\n",
         "# Defining StratifiedKFold object.\r\n",
         "kfold = StratifiedKFold(n_splits=num_folds, random_state=seed, shuffle=True)\r\n",
+        "\r\n",
+        "#############################################################################\r\n",
+        "# return_train_score=True\r\n",
+        "# official documentation: \"computing the scores on the training set can be\r\n",
+        "# computationally expensive and is not strictly required to\r\n",
+        "# select the parameters that yield the best generalization performance\".\r\n",
+        "#############################################################################\r\n",
         "\r\n",
         "# Creating the GridSearchCV object.\r\n",
         "grid = GridSearchCV(estimator=pipe, \r\n",
